script to deploy

--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://mkleung-dev.github.io/react-tictactoe",
   "name": "tictactoe",
   "version": "1.0.0",
   "private": true,
@@ -12,12 +11,13 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "./deploy",
+    "postdeploy": "./postdeploy"
   },
   "eslintConfig": {
     "extends": "react-app"
